--- a/Portfolio/AB/index.html
+++ b/Portfolio/AB/index.html
@@ -66,10 +66,10 @@
 		<div class="overlay">
 			<div class="container">
 				<h1 class="display-1 text-white" style="font-weight: 600;">HI,
-					IAM ANURAG</h1>
+					I'M ANURAG</h1>
 				<br>
 				<h2 class="display-4 text-white" style="font-size: 24px;">A
-					SOFTWARE PROFESSIONAL WITH MULTIPLE TALENTS AND EXPERIENCE</h2>
+					SOFTWARE PROFESSIONAL </h2>
 			</div>
 		</div>
 	</header>
